@@ -11,6 +11,9 @@
   "chat.textbox.hint": "Введите сообщение",
   "chat.message.edited": "изменено",
 
+  "chat.buttons.bottom": "Отмотать вниз",
+  "chat.buttons.settings": "Настройки",
+
   "chat.alerts.dm_not_specified": "Выбери персонажа, чтобы отправить текст",
   "chat.alerts.dm_not_found": "Игрок не на планете",
   "chat.alerts.stagehand_not_found": "^red;Сервер не поддерживает данный чат",
